--- a/Dexterous/dexterous/CMakeLists.txt
+++ b/Dexterous/dexterous/CMakeLists.txt
@@ -10,14 +10,33 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 install(DIRECTORY
   config
   launch
   meshes
   urdf
+  rviz
   DESTINATION share/${PROJECT_NAME})
+
+add_executable(hand_controller src/hand_controller.cpp)
+ament_target_dependencies(
+  hand_controller
+  geometry_msgs
+  std_msgs
+  rclcpp
+  tf2
+  sensor_msgs
+  tf2_ros
+)
+
+install(TARGETS
+    hand_controller
+    DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
