--- a/Dexterous/dexterous/package.xml
+++ b/Dexterous/dexterous/package.xml
@@ -10,8 +10,11 @@
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rclpy</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>tf2</exec_depend>
   
   <buildtool_depend>ament_cmake</buildtool_depend>
   
