--- a/Dexterous/HandCAD/HandAssembly/package.xml
+++ b/Dexterous/HandCAD/HandAssembly/package.xml
@@ -1,10 +1,10 @@
 <package format="2">
-  <name>HandAssembly2</name>
+  <name>HandAssembly</name>
   <version>1.0.0</version>
   <description>
-    <p>URDF Description package for HandAssembly2</p>
+    <p>URDF Description package for HandAssembly</p>
     <p>This package contains configuration data, 3D models and launch files
-for HandAssembly2 robot</p>
+for HandAssembly robot</p>
   </description>
   <author>TODO</author>
   <maintainer email="TODO@email.com" />
