color added to urdf, FK ahi va huh

--- a/Dexterous/dexterous/CMakeLists.txt
+++ b/Dexterous/dexterous/CMakeLists.txt
@@ -12,8 +12,10 @@ find_package(rclpy REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 install(DIRECTORY
   config
@@ -27,11 +29,13 @@ add_executable(hand_controller src/hand_controller.cpp)
 ament_target_dependencies(
   hand_controller
   geometry_msgs
+  visualization_msgs
   std_msgs
   rclcpp
-  tf2
   sensor_msgs
+  tf2
   tf2_ros
+  Eigen3
 )
 
 install(TARGETS
