--- a/Dexterous/dexterous/package.xml
+++ b/Dexterous/dexterous/package.xml
@@ -16,6 +16,7 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2</exec_depend>
+  <exec_depend>dexterous_msgs</exec_depend>
   
   <buildtool_depend>ament_cmake</buildtool_depend>
   
