--- a/Dexterous/dexterous_msgs/CMakeLists.txt
+++ b/Dexterous/dexterous_msgs/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Prism.msg"
+  "msg/VoiceCommand.msg"
   DEPENDENCIES geometry_msgs)
 
 if(BUILD_TESTING)
